<resources>
    <string name="app_name">KarantinaIn</string>
    <string name="daftar_karantinain">Daftar KarantinaIn</string>
    <string name="kembali">Kembali</string>
    <string name="lanjut">Lanjut</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="login_sekarang">Login Sekarang</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="belum_punya_akun_karantinain">Belum punya akun KarantinaIn?</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="usia">Usia</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>

    <!--    API KEY-->
    <string name="google_maps_api">AIzaSyDXIWm5YmDtW2WDW6AeQeqeHtmxHLucKUM</string>

    <!--    kumpulan array-->
    <string-array name="spin_gender">
        <item>Laki - laki</item>
        <item>Perempuan</item>
    </string-array>
    <string-array name="spin_age">\
        <item>6 - 18 tahun</item>
        <item>19 - 30 tahun</item>
        <item>31 - 45 tahun</item>
        <item>46 - 60 tahun</item>
        <item>>60 tahun</item>
    </string-array>
    <string-array name="spin_indication">
        <item>Batuk</item>
        <item>Demam</item>
        <item>Sesak Napas</item>
        <item>Pilek</item>
        <item>Sakit Tenggorokan</item>
        <item>Sakit Kepala</item>
        <item>Mual</item>
        <item>Lainnya</item>
    </string-array>

    <string name="name">Name</string>
    <string name="batuk">Batuk</string>
    <string name="demam">Demam</string>
    <string name="sesak_napas">Sesak Napas</string>
    <string name="pilek">Pilek</string>
    <string name="sakit_tenggorokan">Sakit Tenggorokan</string>
    <string name="sakit_kepala">Sakit Kepala</string>
    <string name="mual">Mual</string>
    <string name="lainnya">Lainnya</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="email">Email</string>
    <string name="no_hp">No HP</string>
    <string name="unggah">Unggah</string>
    <string name="aktifkan">Aktifkan</string>
    <string name="izin_diperlukan_untuk_kebutuhan_inti">Izin diperlukan untuk kebutuhan inti aplikasi</string>
    <string name="nonaktifkan">Nonaktifkan</string>
    <string name="lihat">Lihat</string>
    <string name="lokasi_terbaru">Lokasi terbaru: %1$s</string>
    <string name="tidak_ada_lokasi_terkini">Tidak ada lokasi terkini</string>
    <string name="reset_password">Reset Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_baru">Password baru</string>
    <string name="ketikkan_password">Ketikkan password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="ketik_ulang_password">Ketik ulang password</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="nama_sumber">Nama sumber</string>
    <string name="rekomendasi_kegiatan">Rekomendasi Kegiatan</string>
    <string name="cari_kegiatan">Cari Kegiatan</string>
    <string name="wawasan">Wawasan</string>
    <string name="chat">Chat</string>
    <string name="sehatku">Sehatku</string>
    <string name="beranda">Beranda</string>
    <string name="address">Address</string>
    <string name="indication">Indication</string>
    <string name="riwayat_makanan">Riwayat Makanan</string>
    <string name="riwayat_olahraga">Riwayat Olahraga</string>
    <string name="pilih_makanan">Pilih Makanan</string>
    <string name="pilih_olahraga">Pilih Olahraga</string>
    <string name="keluar">Keluar</string>
    <string name="edit_akun">Edit Akun</string>
    <string name="versi_aplikasi">Versi Aplikasi</string>
    <string name="simpan">Simpan</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="penjelasan_permission_dibutuhkan">Izin ditolak, Izin digunakan untuk kebutuhan inti aplikasi</string>
    <string name="ketik_pesan">Ketik pesan</string>
</resources>