<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity"
    android:padding="24dp"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_splash"
        android:layout_marginTop="34dp"/>

    <LinearLayout
        android:id="@+id/lyField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_below="@+id/imgLogo">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Contoh : namalengkap123"
            android:background="@drawable/input_selector_bg"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="4dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:background="@drawable/input_selector_bg"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    
    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lupa_password"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/lyField"
        android:layout_marginTop="12dp"
        android:textColor="#707D8C"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_grey_rounded"
        android:textAllCaps="false"
        android:text="@string/login_sekarang"
        android:enabled="false"
        android:textColor="@android:color/white"
        android:layout_below="@+id/tvForgotPass"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvRegister"
        android:layout_centerHorizontal="true"
        android:text="@string/belum_punya_akun_karantinain"
        android:textColor="#707D8C"
        android:textSize="14sp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/daftar_disini"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

</RelativeLayout>