<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Login.ForgotPassword.PasswordFragment"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@android:color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/pic_forgot_pass_password"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Masukkan passsword baru"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:paddingStart="62dp"
        android:paddingEnd="62dp"
        android:textColor="#979797"
        android:textSize="14sp"/>

    <LinearLayout
        android:id="@+id/lyField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_baru"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="4dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ketikkan_password"
                android:background="@drawable/input_selector_bg"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/konfirmasi_password"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ketik_ulang_password"
                android:background="@drawable/input_selector_bg"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btnChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:background="@drawable/bg_green_rounded"
        android:textAllCaps="false"
        android:text="@string/ubah_password"
        android:textColor="@android:color/white"/>


</LinearLayout>