<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.Profile.EditAccountActivity"
    android:orientation="vertical"
    android:background="@android:color/white">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:paddingStart="16dp"
        android:paddingTop="17dp"
        android:paddingEnd="16dp"
        android:paddingBottom="17dp"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgBtnBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_back"/>
            <TextView
                android:id="@+id/tvTitleBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/edit_akun"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:gravity="center"/>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_lengkap"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_selector_bg"
            android:hint="Ketik Nama Lengkap"
            android:paddingStart="14dp"
            android:paddingTop="15dp"
            android:paddingEnd="14dp"
            android:paddingBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="24dp"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Contoh : namalengkap123"
            android:background="@drawable/input_selector_bg"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="14dp"
            android:paddingEnd="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_hp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="24dp"/>

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_selector_bg"
            android:hint="Contoh : 08218345XXXX"
            android:inputType="textEmailAddress"
            android:paddingStart="14dp"
            android:paddingTop="15dp"
            android:paddingEnd="14dp"
            android:paddingBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="24dp"/>

        <Spinner
            android:id="@+id/spGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_selector_bg"
            android:paddingStart="14dp"
            android:paddingTop="15dp"
            android:paddingEnd="14dp"
            android:paddingBottom="15dp"
            android:entries="@array/spin_gender"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usia"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="24dp"/>

        <Spinner
            android:id="@+id/spAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_selector_bg"
            android:paddingStart="14dp"
            android:paddingTop="15dp"
            android:paddingEnd="14dp"
            android:paddingBottom="15dp"
            android:entries="@array/spin_age"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/simpan"
            android:layout_marginBottom="31dp"
            android:background="@drawable/bg_green_rounded"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
</LinearLayout>