<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Register.Register2Fragment"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/lyNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">
                <LinearLayout
                    android:id="@+id/lyOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_register_active"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textSize="14sp"
                        android:textColor="@android:color/white"/>
                </LinearLayout>

                <View
                    android:id="@+id/vGaris"
                    android:layout_width="20dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_toEndOf="@+id/lyOne"
                    android:background="@color/colorPrimary"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <LinearLayout
                    android:id="@+id/lyTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/vGaris"
                    android:background="@drawable/bg_register_active"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2"
                        android:textSize="14sp"
                        android:textColor="@android:color/white"/>
                </LinearLayout>
            </RelativeLayout>

            <View
                android:id="@+id/vLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="31dp"
                android:background="@color/colorLine"
                android:layout_below="@+id/lyNumber"/>

            <LinearLayout
                android:id="@+id/lyField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:layout_below="@+id/vLine"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jenis_kelamin"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_marginBottom="4dp"/>

                <Spinner
                    android:id="@+id/spGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_selector_bg"
                    android:paddingStart="14dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="15dp"
                    android:entries="@array/spin_gender"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usia"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="24dp"/>

                <Spinner
                    android:id="@+id/spAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_selector_bg"
                    android:paddingStart="14dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="15dp"
                    android:entries="@array/spin_age"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gejala-gejala yang dialami"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="24dp"/>

                <CheckBox
                    android:id="@+id/cbBatuk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/batuk"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"/>
                <CheckBox
                    android:id="@+id/cbDemam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/demam"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"/>
                <CheckBox
                    android:id="@+id/cbSesakNapas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sesak_napas"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"/>
                <CheckBox
                    android:id="@+id/cbPilek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pilek"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"/>
                <CheckBox
                    android:id="@+id/cbSakitTenggorokan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sakit_tenggorokan"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"/>
                <CheckBox
                    android:id="@+id/cbSakitKepala"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sakit_kepala"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"/>
                <CheckBox
                    android:id="@+id/cbMual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mual"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"/>
                <CheckBox
                    android:id="@+id/cbLainnya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lainnya"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="Daftar"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/bg_green_rounded"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>